Fix for site not showing up at all
oops

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -53,10 +53,6 @@ a:hover {
     text-shadow: 0px 0px 30px rgba(150, 150, 150, 1);
 }
 
-#body {
-    display: none;
-}
-
 .sub{
     font-family: 'Montserrat', sans-serif;
     color: #3C5362;
